--- a/i18n/src/org/netbeans/modules/i18n/wizard/ResourceWizardPanel.form
+++ b/i18n/src/org/netbeans/modules/i18n/wizard/ResourceWizardPanel.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.0" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
-  <SyntheticProperties>
-    <SyntheticProperty name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,44,0,0,1,-112"/>
-  </SyntheticProperties>
+  <AuxValues>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,44,0,0,1,-112"/>
+  </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
   <SubComponents>
@@ -12,8 +12,8 @@
         <Property name="columns" type="int" value="20"/>
         <Property name="editable" type="boolean" value="false"/>
         <Property name="lineWrap" type="boolean" value="true"/>
-        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="org/netbeans/modules/i18n/wizard/Bundle.properties" key="MSG_ResourcePanel_desc" replaceFormat="Util.getString(&quot;{key}&quot;)"/>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="getPanelDescription()" type="code"/>
         </Property>
         <Property name="wrapStyleWord" type="boolean" value="true"/>
         <Property name="opaque" type="boolean" value="false"/>
@@ -48,7 +48,6 @@
           <ResourceString bundle="org/netbeans/modules/i18n/wizard/Bundle.properties" key="CTL_SelectResourceAll" replaceFormat="NbBundle.getBundle(ResourceWizardPanel.class).getString(&quot;{key}&quot;)"/>
         </Property>
       </Properties>
-
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addAllButtonActionPerformed"/>
       </Events>
@@ -64,7 +63,6 @@
           <ResourceString bundle="org/netbeans/modules/i18n/wizard/Bundle.properties" key="CTL_SelectResource" replaceFormat="NbBundle.getBundle(ResourceWizardPanel.class).getString(&quot;{key}&quot;)"/>
         </Property>
       </Properties>
-
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addButtonActionPerformed"/>
       </Events>
