--- a/testtools/src/org/netbeans/modules/testtools/wizards/TestCasesPanel.form
+++ b/testtools/src/org/netbeans/modules/testtools/wizards/TestCasesPanel.form
@@ -15,13 +15,17 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="caseName">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="testMyTestCase"/>
+      </Properties>
 
       <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="caseNameActionPerformed"/>
         <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="caseNameFocusGained"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-          <GridBagConstraints gridX="0" gridY="1" gridWidth="3" gridHeight="1" fill="2" ipadX="0" ipadY="0" insetsTop="4" insetsLeft="4" insetsBottom="4" insetsRight="4" anchor="13" weightX="3.0" weightY="1.0"/>
+          <GridBagConstraints gridX="0" gridY="1" gridWidth="3" gridHeight="1" fill="2" ipadX="0" ipadY="0" insetsTop="4" insetsLeft="4" insetsBottom="4" insetsRight="4" anchor="17" weightX="3.0" weightY="1.0"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -30,10 +34,10 @@
         <Property name="mnemonic" type="int" value="97"/>
         <Property name="text" type="java.lang.String" value="Add"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[100, 27]"/>
+          <Dimension value="[80, 27]"/>
         </Property>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[100, 27]"/>
+          <Dimension value="[80, 27]"/>
         </Property>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
@@ -52,10 +56,10 @@
         <Property name="mnemonic" type="int" value="114"/>
         <Property name="text" type="java.lang.String" value="Remove"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[100, 27]"/>
+          <Dimension value="[80, 27]"/>
         </Property>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[100, 27]"/>
+          <Dimension value="[80, 27]"/>
         </Property>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
@@ -72,12 +76,12 @@
     <Component class="javax.swing.JButton" name="up">
       <Properties>
         <Property name="mnemonic" type="int" value="117"/>
-        <Property name="text" type="java.lang.String" value="Move Up"/>
+        <Property name="text" type="java.lang.String" value="Up"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[100, 27]"/>
+          <Dimension value="[80, 27]"/>
         </Property>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[100, 27]"/>
+          <Dimension value="[80, 27]"/>
         </Property>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
@@ -94,12 +98,12 @@
     <Component class="javax.swing.JButton" name="down">
       <Properties>
         <Property name="mnemonic" type="int" value="100"/>
-        <Property name="text" type="java.lang.String" value="Move Down"/>
+        <Property name="text" type="java.lang.String" value="Down"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[100, 27]"/>
+          <Dimension value="[80, 27]"/>
         </Property>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[100, 27]"/>
+          <Dimension value="[80, 27]"/>
         </Property>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
@@ -132,9 +136,10 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JLabel" name="label1">
+    <Component class="javax.swing.JLabel" name="nameLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Test Case Name:"/>
+        <Property name="displayedMnemonic" type="int" value="110"/>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection component="caseName" type="bean"/>
         </Property>
@@ -145,11 +150,12 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JLabel" name="label2">
+    <Component class="javax.swing.JLabel" name="templateLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Template:"/>
+        <Property name="displayedMnemonic" type="int" value="116"/>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection component="caseName" type="bean"/>
+          <Connection component="testCaseTypes" type="bean"/>
         </Property>
       </Properties>
       <Constraints>
