changes on wizards and templates

--- a/testtools/src/org/netbeans/modules/testtools/templates/unit.html
+++ b/testtools/src/org/netbeans/modules/testtools/templates/unit.html
@@ -12,7 +12,7 @@ Microsystems, Inc. All Rights Reserved.
 -->
 
 <HTML><BODY>
-<h3>Functional Test Type Template</h3>
-You can add another QA Functional Test Type If you have already created Test Workspace.<br>
+<h3>Unit Test Type Template</h3>
+You can add another Unit Test Type If you have already created Test Workspace.<br>
 Place new Test Type inside <br>test<br> folder of your Test Workspace.
 </BODY></HTML>
