new template descriptions

--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/resources/templates/XMLCatalog.html
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/resources/templates/XMLCatalog.html
@@ -12,7 +12,7 @@ Microsystems, Inc. All Rights Reserved.
 -->
 
 <HTML><BODY>
-Using this template you can create a new sample OASIS XML Catalog file.
-<p>
-You can mount it then under XML Entity Catalogs node.
+Using this template, you can create an OASIS XML Catalog file that maps external entity references
+to local resources. You can then mount the catalog under XML Entity Catalogs in the Runtime
+tab of the Explorer.
 </BODY></HTML>
